OS and formattting fixes for Image Mgmt file.

--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -8,12 +8,13 @@
 {productname} enables system administrators to build containers and OS Images and push the result in image stores.
 The workflow looks like this:
 
-. Define an image store
-. Define an image profile and associate it with a source (either a git repository or a directory)
-. Build the image
-. Push the image to the image store
+.Procedure: Building and pushing images
+. Define an image store.
+. Define an image profile and associate it with a source (either a git repository or a directory).
+. Build the image.
+. Push the image to the image store.
 
-{productname} supports two distinct build types: dockerfile, and the Kiwi image system.
+{productname} supports two distinct build types: Dockerfile and the Kiwi image system.
 
 The Kiwi build type is used to build system, virtual, and other images.
 The image store for the Kiwi build type is pre-defined as a file system directory at [path]``/srv/www/os-images`` on the server.
@@ -35,7 +36,7 @@ image::image-building.png[scaledwidth=80%]
 The containers feature is available for {salt} clients running {sles} 12 or later.
 Before you begin, ensure your environment meets these requirements:
 
-* A published git repository containing a dockerfile and configuration scripts.
+* A published git repository containing a Dockerfile and configuration scripts.
   The repository can be public or private, and should be hosted on GitHub, GitLab, or BitBucket.
 * A properly configured image store, such as a Docker registry.
 
@@ -54,7 +55,7 @@ This section guides you through the initial configuration for a build host.
 The operating system on the build host must match the operating system on the targeted image.
 
 For example, build {sles}{nbsp}15 based images on a build host running {sles}{nbsp}15 (SP2 or later) OS version.
-Build {sles}{nbsp}12 based images on a build host running {sles}{nbsp}12 SP4 or {sles}{nbsp}12 SP3 OS version.
+Build {sles}{nbsp}12 based images on a build host running {sles}{nbsp}12 SP5 or {sles}{nbsp}12 SP4 OS version.
 
 Cross-architecture builds are not supported.
 ////
@@ -65,11 +66,13 @@ For example, you must build Raspberry Pi {sles}{nbsp}15 SP3 images on a Raspber
 
 From the {productname} {webui}, perform these steps to configure a build host:
 
+.Procedure: Building a host
 . Select a {salt} client to be designated as a build host from the menu:Systems[Overview] page.
 . From the [guimenu]``System Details`` page of the selected client assign the containers modules.
   Go to menu:Software[Software Channels] and enable the containers module (for example, [guimenu]``SLE-Module-Containers15-Pool`` and [guimenu]``SLE-Module-Containers15-Updates``).
   Confirm by clicking btn:[Change Subscriptions].
-. From the menu:System Details[Properties] page, enable ``Container Build Host`` from the [guimenu]``Add-on System Types`` list and confirm by clicking btn:[Update Properties].
+. From the menu:System Details[Properties] page, enable ``Container Build Host`` from the [guimenu]``Add-on System Types`` list. 
+  Confirm by clicking btn:[Update Properties].
 . Install all required packages by applying ``Highstate``.
   From the system details page select menu:States[Highstate] and click [guimenu]``Apply Highstate``.
   Alternatively, apply Highstate from the {productname} Server command line:
@@ -92,6 +95,7 @@ To build a container, you need an activation key that is associated with a chann
 
 image::systems_create_activation_key.png[scaledwidth=80%]
 
+.Procedure: Creating activation key
 . Select menu:Systems[Activation Keys].
 . Click btn:[Create Key].
 . Enter a [guimenu]``Description`` and a [guimenu]``Key`` name.
@@ -114,6 +118,7 @@ image::images_image_stores.png[scaledwidth=80%]
 +
 image::images_image_stores_create.png[scaledwidth=80%]
 
+.Procedure: Creating Image Store
 . Define a name for the image store in the [guimenu]``Label`` field.
 . Provide the path to your image registry by filling in the [guimenu]``URI`` field, as a fully qualified domain name (FQDN) for the container registry host (whether internal or external).
 +
@@ -138,7 +143,7 @@ This section contains information about creating an image profile with the {prod
 
 image::images_image_profiles.png[scaledwidth=80%]
 
-.Procedure: Create an Image Profile
+.Procedure: Creating an Image Profile
 . To create an image profile select menu:Images[Profiles] and click btn:[Create].
 +
 image::images_image_create_profile.png[scaledwidth=80%]
@@ -150,12 +155,12 @@ image::images_image_create_profile.png[scaledwidth=80%]
 If your container image tag is in a format such as `myproject/myimage`, make sure your image store registry URI contains the `/myproject` suffix.
 ====
 
-. Use a dockerfile as the `Image Type`.
+. Use a Dockerfile as the `Image Type`.
 . Use the drop-down menu to select your registry from the `Target Image Store` field.
 . In the [guimenu]``Path`` field, type a GitHub, GitLab or BitBucket repository URL.
   The URL should be [literal]``http``, [literal]``https``, or a token authentication URL.
   Use one of these formats:
-
++
 .GitHub Path Options
 * GitHub single user project repository
 +
@@ -178,7 +183,7 @@ Use this URL format to authenticate with a GitHub token:
 ----
 https://USER:<AUTHENTICATION_TOKEN>@github.com/USER/project.git#master:/container/
 ----
-
++
 .GitLab Path Options
 * GitLab single user project repository
 +
@@ -203,7 +208,7 @@ https://gitlab-ci-token:<AUTHENTICATION_TOKEN>@gitlab.example.com/USER/project.g
 [IMPORTANT]
 ====
 If you do not specify a git branch, the `master` branch is used by default.
-If a `folder` is not specified, the image sources (dockerfile sources) are expected to be in the root directory of the GitHub or GitLab checkout.
+If a `folder` is not specified, the image sources (Dockerfile sources) are expected to be in the root directory of the GitHub or GitLab checkout.
 ====
 
 . Select an `Activation Key`.
@@ -220,10 +225,9 @@ When you associate an activation key with an image profile you are ensuring any 
 
 
 [[at.images.docker.sourceexample]]
-.Example Dockerfile Sources
+==== Example Dockerfile Sources
 
-
-An Image Profile that can be reused is published at https://github.com/SUSE/manager-build-profiles
+An Image Profile that can be reused is published at https://github.com/SUSE/manager-build-profiles.
 
 [NOTE]
 ====
@@ -265,7 +269,7 @@ RUN /root/add_packages.sh
 RUN rm -f /etc/zypp/repos.d/susemanager:dockerbuild.repo
 ----
 
-.Using Custom Info Key-value Pairs as Docker Buildargs
+==== Using Custom Info Key-value Pairs as Docker Buildargs
 You can assign custom info key-value pairs to attach information to the image profiles.
 Additionally, these key-value pairs are passed to the Docker build command as `buildargs`.
 
@@ -391,7 +395,7 @@ Do not install the build host as a traditional client.
 === Create a Build Host
 
 To build all kinds of images with {productname}, create and configure a build host.
-OS Image build hosts are {salt} clients running on {sles}{nbsp}15 (SP2 or later), {sles}{nbsp}12 (SP3 or later) or {sles}{nbsp}11 SP4.
+OS Image build hosts are {salt} clients running on {sles}{nbsp}15 (SP2 or later) or {sles}{nbsp}12 (SP3 or later).
 
 This procedure guides you through the initial configuration for a build host.
 
@@ -401,15 +405,13 @@ The operating system on the build host must match the operating system on the ta
 
 For example, build {sles}{nbsp}15 based images on a build host running  {sles}{nbsp}15 (SP2 or later) OS version.
 Build {sles}{nbsp}12 based images on a build host running {sles}{nbsp}12 SP4 or {sles}{nbsp}12 SP3 OS version.
-Build {sles}{nbsp}11 based images on a build host running {sles}{nbsp}11 SP4 OS version.
 
 Cross-architecture builds are not possible.
 For example, you must build Raspberry PI {sles}{nbsp}15 SP3 image on a Raspberry PI (aarch64 architecture) build host running {sles}{nbsp}15 SP3.
 ====
 
 
-Configure the build host in the {productname} {webui}:
-
+.Procedure: Configure the build host in the {productname} {webui}
 . Select a client to be designated as a build host from the menu:Systems[Overview] page.
 . Navigate to the menu:System Details[Properties] tab, enable the [guimenu]``Add-on System Type`` [guimenu]``OS Image Build Host``. Confirm with btn:[Update Properties].
 +
@@ -417,10 +419,9 @@ image::os-image-build-host.png[scaledwidth=80%]
 +
 . Navigate to menu:System Details[Software > Software Channels], and enable the required software channels depending on the build host version.
 +
-* {sles}{nbsp}11 build hosts require {productname} Client tools (``SLE-Manager-Tools11-Pool`` and ``SLE-Manager-Tools11-Updates``).
 * {sles}{nbsp}12 build hosts require {productname} Client tools (``SLE-Manager-Tools12-Pool`` and ``SLE-Manager-Tools12-Updates``).
-* {sles}{nbsp}15 build hosts require {sles} modules ``SLE-Module-DevTools15-SP2-Pool`` and ``SLE-Module-DevTools15-SP2-Updates``.
-  Schedule and click btn:[Confirm].
+* {sles}{nbsp}15 build hosts require {sles} modules ``SLE-Module-DevTools15-SP4-Pool`` and ``SLE-Module-DevTools15-SP4-Updates``.
+*  Schedule and click btn:[Confirm].
 . Install Kiwi and all required packages by applying `Highstate`.
   From the system details page select menu:States[Highstate] and click btn:[Apply Highstate].
   Alternatively, apply Highstate from the {productname} Server command line:
@@ -429,7 +430,8 @@ image::os-image-build-host.png[scaledwidth=80%]
 salt '$your_client' state.highstate
 ----
 
-.{productname} Web Server Public Certificate RPM
+==== {productname} Web Server Public Certificate RPM
+
 Build host provisioning copies the {productname} certificate RPM to the build host.
 This certificate is used for accessing repositories provided by {productname}.
 
@@ -440,7 +442,8 @@ When you upgrade the `spacewalk-certs-tools` package, the upgrade scenario calls
 However if the certificate path was changed or unavailable, call the package script manually using `--ca-cert-full-path <path_to_certificate>` after the upgrade procedure has finished.
 
 
-.Package script call example
+==== Package script call example
+
 [source,bash]
 ----
 /usr/sbin/mgr-package-rpm-certificate-osimage --ca-cert-full-path /root/ssl-build/RHN-ORG-TRUSTED-SSL-CERT
@@ -488,6 +491,7 @@ To build OS Images, you need an activation key that is associated with a channel
 
 image::systems_create_activation_key.png[scaledwidth=80%]
 
+.Procedure: Creating an activation key
 . In the {webui}, select menu:Systems[Activation Keys].
 . Click [guimenu]``Create Key``.
 . Enter a [guimenu]``Description``, a [guimenu]``Key`` name, and use the drop-down box to select a [guimenu]``Base Channel`` to associate with the key.
@@ -500,7 +504,6 @@ For more information, see xref:client-configuration:activation-keys.adoc[].
 
 [[at.images.kiwi.imagestore]]
 === Create an Image Store
-
 
 OS Images can require a significant amount of storage space.
 Therefore, we recommended that the OS Image store is located on a partition of its own or on a Btrfs subvolume, separate from the root partition.
@@ -525,12 +528,11 @@ endif::[]
 [[at.images.kiwi.profile]]
 === Create an Image Profile
 
-
 Manage image profiles using the {webui}.
 
 image::images_image_profiles.png[scaledwidth=80%]
 
-.Procedure: Create an Image Profile
+.Procedure: Creating an Image Profile
 . To create an image profile select from menu:Images[Profiles] and click btn:[Create].
 +
 
@@ -557,10 +559,10 @@ Associate an activation key with an image profile to ensure the image profile us
 +
 
 . Confirm with the btn:[Create] button.
-
++
 
 .Source format options
-** git/HTTP(S) URL to the repository
+** _git/HTTP(S) URL to the repository_
 +
 
 URL to the git repository containing the sources of the image to be built.
@@ -586,7 +588,7 @@ In this example, we use `OSImage/POS_Image-JeOS6`:
 https://github.com/SUSE/manager-build-profiles#master:OSImage/POS_Image-JeOS6
 ----
 
-** HTTP(S) URL to the tarball
+** _HTTP(S) URL to the tarball_
 +
 
 URL to the tar archive, compressed or uncompressed, hosted on the webserver.
@@ -595,7 +597,7 @@ URL to the tar archive, compressed or uncompressed, hosted on the webserver.
 https://myimagesourceserver.example.org/MyKiwiImage.tar.gz
 ----
 
-** Path to the directory on the build host
+** _Path to the directory on the build host_
 +
 
 Enter the path to the directory with the Kiwi build system sources.
