--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -1,9 +1,9 @@
 [[image-management]]
-= Image Building and Management
+= Image building and management
 
 
 [[at.images.overview]]
-== Image Building Overview
+== Image building overview
 
 {productname} enables system administrators to build containers and OS Images and push the result in image stores.
 The workflow looks like this:
@@ -25,7 +25,7 @@ Images are stored in [path]``/srv/www/os-image/ORGANIZATION-ID``.
 
 
 [[at.images.docker]]
-== Container Images
+== Container images
 
 image::image-building.png[scaledwidth=80%]
 
@@ -44,7 +44,7 @@ For more information on Containers, see https://documentation.suse.com/container
 
 
 [[at.images.docker.buildhost]]
-=== Create a Build Host
+=== Create a build host
 
 To build images with {productname}, you need to create and configure a build host.
 Container build hosts are {salt} clients running {sle} 12 or later.
@@ -83,7 +83,7 @@ salt '$your_client' state.highstate
 
 
 [[at.images.docker.buildchannels]]
-=== Create an Activation Key for Containers
+=== Create an activation key for containers
 
 The containers built using {productname} use channels associated to the activation key as repositories when building the image.
 This section guides you through creating an ad-hoc activation key for this purpose.
@@ -95,7 +95,7 @@ To build a container, you need an activation key that is associated with a chann
 
 image::systems_create_activation_key.png[scaledwidth=80%]
 
-.Procedure: Creating activation key
+.Procedure: Creating an activation key
 . Select menu:Systems[Activation Keys].
 . Click btn:[Create Key].
 . Enter a [guimenu]``Description`` and a [guimenu]``Key`` name.
@@ -113,12 +113,12 @@ This section contains information about creating an image store.
 
 image::images_image_stores.png[scaledwidth=80%]
 
+.Procedure: Creating Image Store
 . Select menu:Images[Stores].
 . Click [guimenu]``Create`` to create a new store.
 +
 image::images_image_stores_create.png[scaledwidth=80%]
-
-.Procedure: Creating Image Store
++
 . Define a name for the image store in the [guimenu]``Label`` field.
 . Provide the path to your image registry by filling in the [guimenu]``URI`` field, as a fully qualified domain name (FQDN) for the container registry host (whether internal or external).
 +
@@ -225,7 +225,7 @@ When you associate an activation key with an image profile you are ensuring any 
 
 
 [[at.images.docker.sourceexample]]
-==== Example Dockerfile Sources
+==== Example Dockerfile sources
 
 An Image Profile that can be reused is published at https://github.com/SUSE/manager-build-profiles.
 
@@ -269,7 +269,8 @@ RUN /root/add_packages.sh
 RUN rm -f /etc/zypp/repos.d/susemanager:dockerbuild.repo
 ----
 
-==== Using Custom Info Key-value Pairs as Docker Buildargs
+==== Using custom info key-value pairs as Docker `buildargs`
+
 You can assign custom info key-value pairs to attach information to the image profiles.
 Additionally, these key-value pairs are passed to the Docker build command as `buildargs`.
 
@@ -277,7 +278,7 @@ For more information about the available custom info keys and creating additiona
 
 
 [[at.images.docker.building]]
-=== Build an Image
+=== Build an image
 
 
 There are two ways to build an image.
@@ -285,7 +286,7 @@ You can select menu:Images[Build] from the left navigation bar, or click the bui
 
 image::images_image_build.png[scaledwidth=80%]
 
-.Procedure: Building an Image
+.Procedure: Building an image
 . Select menu:Images[Build].
 . Add a different tag name if you want a version other than the default ``latest`` (only relevant to containers).
 . Select [guimenu]``Build Profile`` and [guimenu]``Build Host``.
@@ -300,17 +301,15 @@ When you have selected a build profile, detailed information about the selected 
 . To schedule a build click the btn:[Build] button.
 
 
-
 [[at.images.docker.importing]]
-=== Import an Image
-
+=== Import an image
 
 You can import and inspect arbitrary images.
 Select menu:Images[Image List] from the left navigation bar.
 Complete the text boxes of the [guimenu]``Import`` dialog.
 When it has processed, the imported image is listed on the [guimenu]``Image List`` page.
 
-.Procedure: Importing an Image
+.Procedure: Importing an image
 . From menu:Images[Image list] click btn:[Import] to open the [guimenu]``Import Image`` dialog.
 . In the [guimenu]``Import Image`` dialog complete these fields:
 +
@@ -395,7 +394,7 @@ Do not install the build host as a traditional client.
 === Create a Build Host
 
 To build all kinds of images with {productname}, create and configure a build host.
-OS Image build hosts are {salt} clients running on {sles}{nbsp}15 (SP2 or later) or {sles}{nbsp}12 (SP3 or later).
+OS Image build hosts are {salt} clients running on {sles}{nbsp}15 (SP2 or later) or {sles}{nbsp}12 (SP4 or later).
 
 This procedure guides you through the initial configuration for a build host.
 
@@ -404,7 +403,7 @@ This procedure guides you through the initial configuration for a build host.
 The operating system on the build host must match the operating system on the targeted image.
 
 For example, build {sles}{nbsp}15 based images on a build host running  {sles}{nbsp}15 (SP2 or later) OS version.
-Build {sles}{nbsp}12 based images on a build host running {sles}{nbsp}12 SP4 or {sles}{nbsp}12 SP3 OS version.
+Build {sles}{nbsp}12 based images on a build host running {sles}{nbsp}12 SP5 or {sles}{nbsp}12 SP4 OS version.
 
 Cross-architecture builds are not possible.
 For example, you must build Raspberry PI {sles}{nbsp}15 SP3 image on a Raspberry PI (aarch64 architecture) build host running {sles}{nbsp}15 SP3.
@@ -430,7 +429,7 @@ image::os-image-build-host.png[scaledwidth=80%]
 salt '$your_client' state.highstate
 ----
 
-==== {productname} Web Server Public Certificate RPM
+==== {productname} Web Server public certificate RPM
 
 Build host provisioning copies the {productname} certificate RPM to the build host.
 This certificate is used for accessing repositories provided by {productname}.
@@ -478,7 +477,7 @@ Specify the RPM package with the {productname} SSL certificate in the build sour
 
 
 [[at.images.kiwi.buildchannels]]
-=== Create an Activation Key for OS Images
+=== Create an activation key for OS Images
 
 Create an activation key associated with the channel that your OS Images can use as repositories when building the image.
 
@@ -611,7 +610,7 @@ This directory must be present on the selected build host.
 
 
 [[at.images.kiwi.sourceexample]]
-==== Example of Kiwi Sources
+==== Example of Kiwi sources
 
 
 Kiwi sources consist at least of `config.xml`.
@@ -679,14 +678,14 @@ For information about the Kiwi build system, see the https://osinside.github.io/
 
 
 [[at.images.kiwi.building]]
-=== Build an Image
+=== Build an image
 
 There are two ways to build an image using the {webui}.
 Either select menu:Images[Build], or click the build icon in the menu:Images[Profiles] list.
 
 image::images_image_build.png[scaledwidth=80%]
 
-.Procedure: Building an Image
+.Procedure: Building an image
 . Select menu:Images[Build].
 . Add a different tag name if you want a version other than the default ``latest`` (applies only to containers).
 . Select the [guimenu]``Image Profile`` and a [guimenu]``Build Host``.
@@ -733,7 +732,6 @@ The generated pillar is available to all connected clients.
 [[at.images.kiwi.troubleshooting]]
 === Troubleshooting
 
-
 Building an image requires several dependent steps.
 When the build fails, investigating {salt} states results and build log can help identify the source of the failure.
 You can carry out these checks when the build fails:
@@ -758,8 +756,7 @@ The section contains some known issues when working with images.
 
 
 [[at.images.listing]]
-== List of Built Images
-
+== List of built images
 
 To list available built images select menu:Images[Image List].
 A list of all images is displayed.
