--- a/modules/client-configuration/pages/vhm-kubernetes.adoc
+++ b/modules/client-configuration/pages/vhm-kubernetes.adoc
@@ -99,7 +99,7 @@ You might need to redeploy the image.
 . Click btn:[Create] to create an image store.
 . Navigate to menu:Images[Profiles].
 . Click btn:[Create] to create an image profile.
-    You will need to use a dockerfile that is suitable to deploy to {kube}.
+    You will need to use a Dockerfile that is suitable to deploy to {kube}.
 . Navigate to menu:Images[Build] to build an image with the new profile.
 . Deploy the image into one of the registered {kube} clusters.
     You can do this with the [command]``kubectl`` tool.
