Continue formatting tidying up.

--- a/modules/client-configuration/pages/autoinst-profiles.adoc
+++ b/modules/client-configuration/pages/autoinst-profiles.adoc
@@ -122,9 +122,8 @@ These are the most important sections in the {ay} installation file for installi
 * ``<general>$SNIPPET('spacewalk/sles_no_signature_checks')</general>` disables signature checks
 
 * ``<software>`` allows to specify product for the {unifiedinstaller}
+** See https://doc.opensuse.org/projects/autoyast/#CreateProfile-Software with a "<software>" example
 +
-  See https://doc.opensuse.org/projects/autoyast/#CreateProfile-Software with a "<software>" example
-
 * ``<init-scripts config:type="list">$SNIPPET('spacewalk/minion_script')</init-scripts>`` allows the client to register to {productname} as a Salt client.
 
 For more information about {ay}, see https://doc.opensuse.org/projects/autoyast/.
