Fixed broken Uyuni link.

--- a/modules/reference/pages/help/documentation-version.adoc
+++ b/modules/reference/pages/help/documentation-version.adoc
@@ -6,4 +6,4 @@ This is the documentation installed locally on your {productname} Server.
 
 For all versions and formats of the {susemgr} documentation, including API documentation, see https://documentation.suse.com/suma/.
 
-For all versions and formats of the {uyuni} documentation, see https://www.uyuni-project.org/uyuni-docs/uyuni/index.html.
+For all versions and formats of the {uyuni} documentation, see https://www.uyuni-project.org/uyuni-docs/index.html.
