Amazon Linux 2023 (for Uyuni)

--- a/modules/client-configuration/pages/clients-amazon.adoc
+++ b/modules/client-configuration/pages/clients-amazon.adoc
@@ -84,11 +84,21 @@ The channels you need for this procedure are:
 | amazonlinux2-core
 | amazonlinux2-uyuni-client
 
+| {amazon} 2023
+| amazonlinux2023
+| amazonlinux2023-uyuni-client
+
 |===
+
 
 [NOTE]
 ====
-Make sure you also add and sync `amazonlinux2-extra-docker` channel if you plan to use Docker at your {amazon} instances.
+For {amazon} 2, make sure you also add and sync `amazonlinux2-extra-docker` channel if you plan to use Docker at your {amazon} instances.
+====
+
+[NOTE]
+====
+For {amazon} 2023, make sure you also add and sync `amazonlinux2023-kernel-livepatch` channel if you plan to use Kernel Live patches at your {amazon} instances.
 ====
 
 include::snippets/addchannels_novendor_cli.adoc[]
