--- a/modules/client-configuration/pages/supported-features-amazon.adoc
+++ b/modules/client-configuration/pages/supported-features-amazon.adoc
@@ -18,7 +18,7 @@ The icons in this table indicate:
 * {trad} the feature is supported only on traditional clients
 * {salt} the feature is supported only on Salt clients
 
-
+ifeval::[{suma-content} == true]
 [cols="1,1", options="header"]
 .Supported Features on {amazon} Operating Systems
 |===
@@ -153,6 +153,187 @@ The icons in this table indicate:
 | N/A
 
 |===
+endif::[]
+
+ifeval::[{uyuni-content} == true]
+[cols="1,1,1", options="header"]
+.Supported Features on {amazon} Operating Systems
+|===
+
+| Feature
+| {amazon}{nbsp}2
+| {amazon}{nbsp}2023
+
+| Client
+| {salt}
+| {salt}
+
+| Operating system packages
+| {salt}
+| {salt}
+
+| Registration
+| {salt}
+| {salt}
+
+| Install packages
+| {salt}
+| {salt}
+
+| Apply patches (requires CVE ID)
+| {salt}
+| {salt}
+
+| Remote commands
+| {salt}
+| {salt}
+
+| System package states
+| {salt}
+| {salt}
+
+| System custom states
+| {salt}
+| {salt}
+
+| Group custom states
+| {salt}
+| {salt}
+
+| Organization custom states
+| {salt}
+| {salt}
+
+| System set manager (SSM)
+| {salt}
+| {salt}
+
+| Product migration
+| N/A
+| N/A
+
+| Basic Virtual Guest Management {star}
+| {question}
+| {question}
+
+| Advanced Virtual Guest Management {star}
+| {question}
+| {question}
+
+| Virtual Guest Installation (Kickstart), as Host OS
+| {cross}
+| {cross}
+
+| Virtual Guest Installation (image template), as Host OS
+| {question}
+| {question}
+
+| System deployment (PXE/Kickstart)
+| {question}
+| {question}
+
+| System redeployment (Kickstart)
+| {question}
+| {question}
+
+| Contact methods
+| {salt}: ZeroMQ, Salt-SSH
+| {salt}: ZeroMQ, Salt-SSH
+
+| Works with {productname} Proxy
+| {salt}
+| {salt}
+
+| Action chains
+| {salt}
+| {salt}
+
+| Staging (pre-download of packages)
+| {salt}
+| {salt}
+
+| Duplicate package reporting
+| {salt}
+| {salt}
+
+| CVE auditing (requires CVE ID)
+| {salt}
+| {salt}
+
+| SCAP auditing
+| {salt}
+| {salt}
+
+| Package verification
+| {cross}
+| {cross}
+
+| Package locking
+| {cross}
+| {cross}
+
+| System locking
+| {cross}
+| {cross}
+
+| Maintenance Windows
+| {check}
+| {check}
+
+| System snapshot
+| {cross}
+| {cross}
+
+| Configuration file management
+| {salt}
+| {salt}
+
+| Snapshots and profiles
+| {salt}: Profiles supported, Sync not supported
+| {salt}: Profiles supported, Sync not supported
+
+| Power management
+| {question}
+| {question}
+
+| Monitoring server
+| {cross}
+| {cross}
+
+| Monitored clients
+| {salt}
+| {salt}
+
+| Docker buildhost
+| {salt}
+| {salt}
+
+| Build Docker image with OS
+| {salt}
+| {salt}
+
+| Kiwi buildhost
+| {salt}
+| {salt}
+
+| Build Kiwi image with OS
+| {salt}
+| {salt}
+
+| Recurring Actions
+| {salt}
+| {salt}
+
+| AppStreams
+| N/A
+| N/A
+
+| Yomi
+| N/A
+| N/A
+
+|===
+endif::[]
 
 {star} Virtual Guest Management:
 
