--- a/modules/installation-and-upgrade/pages/proxy-x.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-x.adoc
@@ -5,8 +5,7 @@ In some cases {productname} Proxy can be upgraded from one major version to the 
 For example, Proxy can be upgraded from 3.2 to 4.1, but not from 3.2 to 4.3.
 
 To upgrade from 3.2 to 4.3, you must first upgrade from 3.2 to 4.2, then upgrade from 4.2 to 4.3.
-For more information on upgrading from 3.2 to 4.1, see:
 
-link:https://documentation.suse.com/external-tree/en-us/suma/4.1/suse-manager/upgrade/proxy-intro.html[]
+* For more information on upgrading from 3.2 to 4.1, see: https://documentation.suse.com/external-tree/en-us/suma/4.1/suse-manager/upgrade/proxy-intro.html[].
 
-For more information on upgrading from 4.2 to 4.3, see xref:installation-and-upgrade:proxy-y-z.adoc[]
+* For more information on upgrading from 4.2 to 4.3, see xref:installation-and-upgrade:proxy-y-z.adoc[Proxy - Minor Version or Patch Level Upgrade (Y or Z Upgrade)].
