--- a/modules/client-configuration/pages/clients-amazon.adoc
+++ b/modules/client-configuration/pages/clients-amazon.adoc
@@ -93,12 +93,12 @@ The channels you need for this procedure are:
 
 [NOTE]
 ====
-For {amazon} 2, make sure you also add and sync `amazonlinux2-extra-docker` channel if you plan to use Docker at your {amazon} instances.
+For {amazon} 2, make sure you also add and synchronize `amazonlinux2-extra-docker` channel if you plan to use Docker at your {amazon} instances.
 ====
 
 [NOTE]
 ====
-For {amazon} 2023, make sure you also add and sync `amazonlinux2023-kernel-livepatch` channel if you plan to use Kernel Live patches at your {amazon} instances.
+For {amazon} 2023, make sure you also add and synchronize `amazonlinux2023-kernel-livepatch` channel if you plan to use Kernel Live patches at your {amazon} instances.
 ====
 
 include::snippets/addchannels_novendor_cli.adoc[]
