Bixed broken lists and broken links.

--- a/modules/quickstart/pages/quickstart-install-uyuni-proxy.adoc
+++ b/modules/quickstart/pages/quickstart-install-uyuni-proxy.adoc
@@ -60,9 +60,9 @@ When you have installed openSUSE Leap on the proxy and configured the FQDN, you
 ----
 ORG_GPG_KEY=uyuni-gpg-pubkey-0d20833e.key
 ----
-  For more information, see xref:client-configuration:clients-opensuse.adoc[].
+  ** For more information, see xref:client-configuration:clients-opensuseleap.adoc[].
 . Bootstrap the client using the script.
-  For more information, see xref:client-configuration:registration-bootstrap.adoc[].
+  ** For more information, see xref:client-configuration:registration-bootstrap.adoc[].
 . Navigate to menu:Salt[Keys] and accept the key.
   When the key is accepted, the new proxy will show in menu:Systems[Overview] in the [guimenu]``Recently Registered Systems`` section.
 . Navigate to menu:System Details[Software > Software Channels], and check that the proxy channel is selected.
