Removed link to non-existant file.

--- a/modules/administration/pages/actions.adoc
+++ b/modules/administration/pages/actions.adoc
@@ -145,7 +145,7 @@ For transactional update systems, consider that a remote command is run inside a
 This can cause some limitations.
 
 ifeval::[{uyuni-content} == true]
-For more information, see xref:client-configuration:clients-slemicro.adoc[] and xref:client-configuration:clients-microos.adoc[].
+For more information, see xref:client-configuration:clients-slemicro.adoc[].
 endif::[]
 
 ifeval::[{suma-content} == true]
