--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -151,6 +151,10 @@ ifeval::[{uyuni-content} == true]
 | {x86_64}, {aarch64}
 | {check}
 
+| {amazon} 2023
+| {x86_64}, {aarch64}
+| {check}
+
 | {centos} 7
 | {x86_64}, {ppc64le}, {aarch64}
 | {check}
