--- a/modules/client-configuration/pages/clients-amazon.adoc
+++ b/modules/client-configuration/pages/clients-amazon.adoc
@@ -17,9 +17,12 @@ endif::[]
 
 [WARNING]
 ====
-When created at AWS, {amazon} instances always have the same `machine-id` id at `/etc/machine-id`.
-Make sure you regenerate the `machine-id` after the instance is created.
+When created at AWS, {amazon} 2 instances always have the same `machine-id` id at `/etc/machine-id`.
+If you are creating {amazon} 2 instances, make sure you regenerate the `machine-id` after the instances are created.
 For more information, see xref:administration:troubleshooting/tshoot-registerclones.adoc[].
+ifeval::[{uyuni-content} == true]
+Amazon Linux 2023 is not affected by this.
+endif::[]
 ====
 
 
@@ -77,7 +80,7 @@ The channels you need for this procedure are:
 |===
 
 | OS Version
-| Core Channel
+| Base Channel
 | Client Channel
 
 | {amazon} 2
